--- a/styles.css
+++ b/styles.css
@@ -98,9 +98,9 @@ main {
     body {
         display: flex;
         width: 100%;
-        min-height: 100vh;
         align-items: center;
         justify-content: center;
+        padding: 2rem 0;
     }
     main {
         display: flex;
